<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_user_step"/>

        <Button
            android:id="@+id/userStepsButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/config_user_height"
            android:layout_marginTop="@dimen/global_margin_standard"
            android:background="@drawable/btg_btn_blue_rect"
            android:onClick="onUserStep"
            android:text="@string/global_yes"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin_standard"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_console_log"/>

        <Button
            android:id="@+id/consoleLogButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/config_user_height"
            android:layout_marginTop="@dimen/global_margin_standard"
            android:background="@drawable/btg_btn_blue_rect"
            android:onClick="onConsoleLog"
            android:text="@string/global_yes"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin_standard"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_crash_log"/>

        <Button
            android:id="@+id/crashLogButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/config_user_height"
            android:layout_marginTop="@dimen/global_margin_standard"
            android:background="@drawable/btg_btn_blue_rect"
            android:onClick="onCrashLog"
            android:text="@string/global_yes"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin_standard"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_crash_raise"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/config_user_height"
            android:layout_marginTop="@dimen/global_margin_standard"
            android:background="@drawable/btg_btn_blue_rect"
            android:onClick="onCrash"
            android:text="@string/config_crash_raise_do"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_set_user_data"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_standard"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/config_user_data_key"/>

            <EditText
                android:id="@+id/keyText"
                android:layout_width="@dimen/config_user_data_text_width"
                android:layout_height="60dp"
                android:layout_gravity="bottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/config_user_data_value"/>

            <EditText
                android:id="@+id/valueText"
                android:layout_width="@dimen/config_user_data_text_width"
                android:layout_height="60dp"
                android:layout_gravity="bottom"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/config_user_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/global_margin_standard"
                android:background="@drawable/btg_btn_blue_rect"
                android:onClick="onSetUseData"
                android:text="@string/global_set"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/global_margin_large"
        android:background="@drawable/btg_btn_blue_rect"
        android:onClick="onPost"
        android:padding="@dimen/global_margin_standard"
        android:text="@string/main_feedback"
        android:textColor="@android:color/white"/>

</LinearLayout>
