<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/btg_main_banner"/>

    <LinearLayout
        android:id="@+id/topButton"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/topImage"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btg_btn_text_color"
            android:drawablePadding="-20dp"
            android:drawableTop="@drawable/btg_btn_functions"
            android:onClick="onFunctions"
            android:paddingTop="30dp"
            android:text="@string/main_functions"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/global_font_big"/>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/btg_demo_line_vertical"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btg_btn_text_color"
            android:drawablePadding="-20dp"
            android:drawableTop="@drawable/btg_btn_config"
            android:onClick="onConfig"
            android:paddingTop="30dp"
            android:text="@string/main_config"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/global_font_big"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/middleLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topButton"
        android:background="@drawable/btg_demo_line_horizontal"/>

    <LinearLayout
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/middleLine"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btg_btn_text_color"
            android:drawablePadding="-20dp"
            android:drawableTop="@drawable/btg_btn_feedback"
            android:onClick="onFeedback"
            android:paddingTop="30dp"
            android:text="@string/main_feedback"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/global_font_big"/>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/btg_demo_line_vertical"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btg_btn_text_color"
            android:drawablePadding="-20dp"
            android:drawableTop="@drawable/btg_btn_custom"
            android:onClick="onCustom"
            android:paddingTop="30dp"
            android:text="@string/main_custom"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/global_font_big"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bottomButton"
        android:background="@drawable/btg_demo_line_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btg_demo_btn_blue_rect_normal"
        android:gravity="center"
        android:text="@string/main_born"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_font_less_big"/>

</RelativeLayout>
